# serializer version: 1
# name: test_render_doctor_report_when_rendered_does_match_the_snapshot[multiline-detail-color-off]
  list([
    'gymrat v0.5.0 · python 3.13.0 · darwin',
    '',
    'Bench',
    '  ✓ line one',
    '    line two',
    '    line three',
    '',
    'Note: prepare scripts were not run; only the Claude skill file location was checked (presence ≠ loaded).',
    '',
    '1 ok',
  ])
# ---
# name: test_render_doctor_report_when_rendered_does_match_the_snapshot[ok-warn-fail-color-off]
  list([
    'gymrat v0.5.0 · python 3.13.0 · darwin',
    '',
    'Environment',
    '  ✓ git 2.45.0',
    '  ⚠ skill not installed',
    '    run gymrat init',
    '',
    'Bench',
    '  ✗ bench not set',
    '    set bench in gymrat.toml',
    '',
    'Note: prepare scripts were not run; only the Claude skill file location was checked (presence ≠ loaded).',
    '',
    '1 ok · 1 warning · 1 failure',
  ])
# ---
# name: test_render_doctor_report_when_rendered_does_match_the_snapshot[ok-warn-fail-color-on]
  list([
    '\x1b[1mgymrat v0.5.0\x1b[0m\x1b[2m · python 3.13.0 · darwin\x1b[0m',
    '',
    '\x1b[1mEnvironment\x1b[0m',
    '  \x1b[32m✓\x1b[0m git 2.45.0',
    '  \x1b[33m⚠\x1b[0m skill not installed',
    '    \x1b[2mrun gymrat init\x1b[0m',
    '',
    '\x1b[1mBench\x1b[0m',
    '  \x1b[31m✗\x1b[0m bench not set',
    '    \x1b[2mset bench in gymrat.toml\x1b[0m',
    '',
    '\x1b[2mNote: prepare scripts were not run; only the Claude skill file location was checked (presence ≠ loaded).\x1b[0m',
    '',
    '\x1b[32m1\x1b[0m ok · \x1b[33m1\x1b[0m warning · \x1b[31m1\x1b[0m failure',
  ])
# ---
# name: test_render_doctor_report_when_rendered_does_match_the_snapshot[plural-counts-color-off]
  list([
    'gymrat v0.5.0 · python 3.13.0 · darwin',
    '',
    'All',
    '  ✓',
    '  ⚠',
    '  ⚠',
    '  ✗',
    '  ✗',
    '  ✗',
    '',
    'Note: prepare scripts were not run; only the Claude skill file location was checked (presence ≠ loaded).',
    '',
    '1 ok · 2 warnings · 3 failures',
  ])
# ---
# name: test_render_doctor_report_when_rendered_does_match_the_snapshot[warn-only-color-off]
  list([
    'gymrat v0.5.0 · python 3.13.0 · darwin',
    '',
    'Environment',
    '  ✓ git 2.45.0',
    '  ⚠ skill not installed',
    '    run gymrat init',
    '',
    'Note: prepare scripts were not run; only the Claude skill file location was checked (presence ≠ loaded).',
    '',
    '1 ok · 1 warning',
  ])
# ---
# name: test_render_doctor_report_when_rendered_does_match_the_snapshot[workflow-skipped-color-off]
  list([
    'gymrat v0.5.0 · python 3.13.0 · darwin',
    '',
    'Workflow',
    '  ✓ Skipped — fix config errors first',
    '',
    'Note: prepare scripts were not run; workflow checks (including the Claude skill file check) were skipped because config errors block them.',
    '',
    '1 ok',
  ])
# ---
